<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maingradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

    </LinearLayout>

    <TextView
			android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="60dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/upperText_login" />

    <TextView
			android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="60dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/bottomText_login" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="230dp"
        android:background="@drawable/shape_bar"
        android:text="@string/btn_login"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>
