<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="2dp">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/imageFileIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/icon_circle_doc"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/doc_default_type"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />


            <TextView
                android:id="@+id/textFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:layout_toEndOf="@id/imageFileIcon"
                android:text="@string/doc_default_name" />

            <LinearLayout
                android:id="@+id/textBarLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageFileIcon"
                android:layout_marginTop="5dp"
                android:layout_below="@id/textFileName"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textFileSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:text="@string/doc_default_size" />

                <TextView
                    android:id="@+id/textFileDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/doc_default_date" />
            </LinearLayout>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
